--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "Artistic-2.0",
   "dependencies": {
     "gl-matrix": "^2.3.2",
+    "glsl-blend": "^1.0.3",
+    "glsl-hash-blur": "^1.0.3",
     "glsl-quad": "^1.0.0",
     "ouioui": "0.0.22",
     "regl": "^1.3.0"
