--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
   "author": "Jay Weeks <jay.patrick.weeks@gmail.com> (https://jayweeks.com)",
   "license": "Artistic-2.0",
   "dependencies": {
-    "colr": "^1.2.2",
     "gl-matrix": "^2.3.2",
     "glsl-blend": "^1.0.3",
     "glsl-hash-blur": "^1.0.3",
     "glsl-quad": "^1.0.0",
-    "ouioui": "0.0.22",
+    "ouioui": "github:jpweeks/oui#v0.0.22-a",
     "regl": "^1.3.0"
   },
   "devDependencies": {
