--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "regl": "^1.3.0"
   },
   "devDependencies": {
+    "browserify": "^14.4.0",
+    "budo": "^10.0.3",
     "glslify": "^6.1.0",
-    "installify": "^1.1.0"
+    "installify": "^1.1.0",
+    "uglify-js": "^3.0.19"
   },
   "scripts": {
     "start": "budo src/index.js:static/bundle.js --live -- -t installify -t glslify",
+    "build": "browserify -t [ glslify ] src/index.js | uglifyjs --compress --mangle > static/bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
